# orbit

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  SKILL.md  orbit.config.example.json  pyproject.toml
.claude-plugin/: marketplace.json
commands/: cmo.md  codex.md  commit.md  cto.md  debug.md  go-live-check.md  office-hours.md  plan-phases.md  rca.md  run-phase.md
design-references/: RESOURCES.md
documents/: product-brief.md
plans/: delivery-onboarding-progress.md  delta-transcripts-classify-chapterize-progress.md  master-plan.md  overlap-trending-scoop-progress.md  phase-1-scaffold-state-sources.md  phase-2-delta-transcripts-classify-chapterize.md  phase-3-rank-density-render.md  phase-4-x-source-into-pipeline.md  phase-5-overlap-trending-scoop.md  phase-6-delivery-onboarding.md  phase-7-tiles-digest-render.md  phase-8-spec-alignment-progress.md  phase-8-spec-alignment.md  prd.md  rank-density-render-progress.md  scaffold-state-sources-progress.md  v2-cloud-email-digest-plan.md  x-source-into-pipeline-progress.md
reference/: api-contracts.md  browser-debug-playbook.md  conventions.md  design-language.md  integrations.md  stack-notes.md
references/: chapterize.md  classify.md  design-brief.md  sections.md  summarize.md  summarize_video.md  summarize_x.md
scripts/: build_fonts.py  build_tiles_reference.py  orbit.py  store.py
tests/: test_archive.py  test_bird_x_delta.py  test_bird_x_following.py  test_chapterize.py  test_chat_bridge.py  test_classify.py  test_classify_x.py  test_cluster.py  test_config.py  test_deliver.py  test_delta_uploads.py  (+22 more)
(+112 files in other folders)
